--- a/src/pages/movieDetail.css
+++ b/src/pages/movieDetail.css
@@ -1,56 +1,62 @@
-.backgroundImg{
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 50vh;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 0;
+.backgroundImg {
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50vh;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 0;
 }
-.gradient{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
+.backgroundVideo {
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 0;
 }
-.describe-text{
-    color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 24px;
+.gradient {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
 }
-.details-container{
-    display: flex;
-    justify-content: space-around;
-    margin: 24px;
-    align-items: center;
+.describe-text {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 24px;
 }
-.title-text{
-    color:white;
-    font-weight: bold;
-    font-size: 1.5rem;
+.details-container {
+  display: flex;
+  justify-content: space-around;
+  margin: 24px;
+  align-items: center;
 }
-.description-movie{
-    text-align: center;
-    color: white;
-    font-size: 1rem;
+.title-text {
+  color: white;
+  font-weight: bold;
+  font-size: 1.5rem;
 }
-.page-title{
-    position: absolute;
-    top: 0;
-    left:0;
-    transform: translate(50%, 50%);
-    color: white;
-    font-weight: bold;
-    font-size: 1.5rem;
+.description-movie {
+  text-align: center;
+  color: white;
+  font-size: 1rem;
 }
-.container-similar-carousel{
-    text-align: center;
-    color: white;
-    font-weight: bold;
-    font-size: 1.5rem;
-    padding-top: 40px;
+.page-title {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(50%, 50%);
+  color: white;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+.container-similar-carousel {
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding-top: 40px;
 }
