--- a/src/components/button/customButton.css
+++ b/src/components/button/customButton.css
@@ -1,4 +1,6 @@
-.btn-custom{
+.btn-custom p{
+    margin: 0;
+    padding: 0;
     display: inline-flex;
     align-items: center;
     justify-content: center;
