--- a/src/components/cardCast/cardCast.css
+++ b/src/components/cardCast/cardCast.css
@@ -1,8 +1,16 @@
-/* .castCard{
+.castCard {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 1rem;
-    height: 200px;
-    width: 200px;
-} */
+    padding: 8px;
+    border-radius: 20px;
+    background-color: transparent;
+    color: white;
+}
+.img-card-cast {
+    border-radius: 50%;
+    object-fit: cover;
+    width: 100px;
+    height: 100px;
+}
